--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -22,5 +22,7 @@
       </activity>
       <activity android:name="com.facebook.react.devsupport.DevSettingsActivity" />
     </application>
-
+<meta-data
+     android:name="com.google.android.geo.API_KEY"
+     android:value="AIzaSyAas0mYkfjYKGQ-Iv0BzF9CzkMnkHUlsrk"/>
 </manifest>
