--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "react": "16.8.3",
     "react-native": "0.59.5",
     "react-native-keyboard-aware-scroll-view": "^0.8.0",
+    "react-native-maps": "^0.24.2",
     "react-native-navigation": "^1.1.493",
     "react-native-vector-icons": "^6.4.2",
     "react-redux": "^6.0.1",
