--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -146,7 +146,8 @@ dependencies {
  compile fileTree(dir: "libs", include: ["*.jar"])
  compile project(':react-native-vector-icons')
  compile project(':react-native-navigation')
-implementation project(':react-native-maps')
+ implementation project(':react-native-maps')
+ compile project(':react-native-image-picker')
 
 }
 
