--- a/android/gradle.properties
+++ b/android/gradle.properties
@@ -16,3 +16,11 @@
 # This option should only be used with decoupled projects. More details, visit
 # http://www.gradle.org/docs/current/userguide/multi_project_builds.html#sec:decoupled_projects
 # org.gradle.parallel=true
+
+# https://corbt.com/posts/2015/09/18/mixing-32-and-64bit-dependencies-in-android.html
+# android.useDeprecatedNdk=true
+
+MYAPP_RELEASE_STORE_FILE=key.keystore
+MYAPP_RELEASE_KEY_ALIAS=upload2
+MYAPP_RELEASE_STORE_PASSWORD=iounio
+MYAPP_RELEASE_KEY_PASSWORD=iounio 
