--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "react-native-keyboard-aware-scroll-view": "^0.8.0",
     "react-native-maps": "^0.24.2",
     "react-native-navigation": "^1.1.493",
+    "react-native-responsive-screen": "^1.2.2",
     "react-native-vector-icons": "^6.4.2",
     "react-redux": "^6.0.1",
     "redux": "^4.0.1",
